--- a/Meducatehome.html
+++ b/Meducatehome.html
@@ -137,9 +137,12 @@
     <a href="Meducatehome.html">Home</a>
     <a href="MeducateCourse.html">Customer Numbers</a>
     <a href="Meducateabout.html">About Us</a>
+	<a href="Meducateclass.html">Class Schedule</a>
+	<a href="Meducateclass.html">Membership</a>
     <a href="Meducatecontact.html">Contact Us</a>
     <a href="Meducatelogin.html" class="right">Log In</a>
   </div>  
+  
   <p id="main_page">
       <!--Divide the main body into a side panel and a main panel-->
     <div class="row">
