--- a/Meducatelogin.html
+++ b/Meducatelogin.html
@@ -137,6 +137,8 @@
 	<a href="Meducatehome.html">Home</a>
     <a href="MeducateCourse.html">Customer Numbers</a>
     <a href="Meducateabout.html">About Us</a>
+	<a href="Meducateclass.html">Class Schedule</a>
+	<a href="Meducateclass.html">Membership</a>
     <a href="Meducatecontact.html">Contact Us</a>
     <a href="Meducatelogin.html" class="right">Log In</a>
   </div>  
