--- a/MeducateStudentMembership.html
+++ b/MeducateStudentMembership.html
@@ -145,8 +145,8 @@
     <a href="Meducatehome.html">Home</a>
     <a href="MeducateCourse.html">Customer Numbers</a>
     <a href="Meducateabout.html">About Us</a>
-	<a href="Meducateclass.html">Class Schedule</a>
-	<a href="Meducateclass.html">Class Schedule</a>
+	<a href="MeducateClassSchedule.html">Class Schedule</a>
+	<a href="MeducateStudentMembership.html">Membership</a>
     <a href="Meducatecontact.html">Contact Us</a>
     <a href="Meducatelogin.html" class="right">Log In</a>
   </div>  
@@ -203,13 +203,7 @@
 				<p>Meducate 2020</p>
 			</br>	
 			</br>
-		<div class="icon-bar">
-		  <a href="https://www.facebook.com/"  target="_blank"class="facebook"><i class="fa fa-facebook"></i></a> 
-		  <a href="https://twitter.com/Meducate" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a> 
-		  <a href="https://mecucate@gmail.com" target="_blank" class="google"><i class="fa fa-google"></i></a> 
-		  <a href="https://www.linkedin.com/" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
-		  <a href="https://www.youtube.com/watch?v=vKsqcPhfXoA" target="_blank" class="youtube"><i class="fa fa-youtube"></i></a> 
-		</div>
+		<
 		</footer>	
     </body>
 	<script>
