--- a/Meducateabout.html
+++ b/Meducateabout.html
@@ -139,8 +139,8 @@
     <a href="Meducatehome.html">Home</a>
     <a href="MeducateCourse.html">Customer Numbers</a>
     <a href="Meducateabout.html">About Us</a>
-	<a href="Meducateclass.html">Class Schedule</a>
-	<a href="Meducateclass.html">Membership</a>
+	<a href="MeducateClassSchedule.html">Class Schedule</a>
+	<a href="MeducateStudentMembership.html">Membership</a>
 	<a href="Medcuatecontact.html">Contact Us</a>
     <a href="Meducatelogin.html" class="right">Log In</a>
   </div>  
