--- a/MeducateCourse.html
+++ b/MeducateCourse.html
@@ -157,9 +157,10 @@ rect:hover{
     <a href="Meducatehome.html">Home</a>
     <a href="MeducateCourse.html">Customer Numbers</a>
     <a href="Meducateabout.html">About Us</a>
-	<a href="Meducateclass.html">Class Schedule</a>
-    <a href="Meducatecontact.html">Contact Us</a>
-    <a href="Meducatelogin.html" class="right">Log In</a>
+	<a href="MeducateClassSchedule.html">Class Schedule</a>
+	<a href="MeducateStudentMembership.html">Membership</a>
+	<a href="Medcuatecontact.html">Contact Us</a>
+    <a href="Meducatelogin.html" class="right"
   </div>  
   <div style="margin:60px">
   </div>  
